ofe/envoy.yaml
# Portions Copyright (c) Microsoft Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_resources:
  listeners:
  - name: server_listener
    per_connection_buffer_limit_bytes: 52428800
    address:
      socket_address: { address: 0.0.0.0, port_value: 51052 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: envoy_router
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: [ "*" ]
              routes:
              - match: { prefix: "/" }
                route: { cluster: grpc_cluster, timeout: 5s }
            response_headers_to_add:
            - header:
                key: 'x-allow-FLEDGE'
                value: 'true'
              append: false
            - header:
                key: 'x-fledge-bidding-signals-format-version'
                value: '2'
              append: false
            - header:
                key: 'Access-Control-Allow-Origin'
                value: '*'
              append: false
          http_filters:
          - name: envoy.filters.http.grpc_stats
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
              stats_for_all_methods: true
              enable_upstream_stats: true
          - name: envoy.filters.http.health_check
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
              pass_through_mode: false
              cluster_min_healthy_percentages:
                grpc_cluster: { value: 50 }
              headers:
              - name: ":path"
                exact_match: "/healthcheck"
          - name: envoy.filters.http.grpc_json_transcoder
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
              proto_descriptor: "/etc/envoy/bidding_auction_servers_descriptor_set.pb"
              services:
              - "privacy_sandbox.bidding_auction_servers.BuyerFrontEnd"
              print_options:
                add_whitespace: true
                always_print_primitive_fields: true
                always_print_enums_as_ints: false
                preserve_proto_field_names: false
              request_validation_options:
                reject_unknown_method: true
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              
  clusters:
  - name: grpc_cluster
    connect_timeout: 2s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    dns_lookup_family: V4_ONLY
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: { }
    load_assignment:
      cluster_name: grpc_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 0.0.0.0
                port_value: 50051
    common_lb_config:
      healthy_panic_threshold:
        value: 50
    health_checks:
    - interval: 60s
      timeout: 3s
      no_traffic_interval: 60s
      no_traffic_healthy_interval: 4s
      unhealthy_threshold: 5
      healthy_threshold: 5
      grpc_health_check: { }
